--- a/index_home.html
+++ b/index_home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Neco-Tubu ネコのつぶやき</title>
-          <!-- test2 --><!-- 練習で追加 -->
+          <!-- test2 --><!-- 練習で追加 --><!-- commit test -->
 
   <style>
     :root{
